# scent

./: .gitignore  Makefile  README.md  TODO.md  meson.build  notes.md  premake5.lua
ext/GLFW/: Makefile  premake5.lua
ext/glad/: Makefile  premake5.lua
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: alloc.cpp  alloc.hpp  alloc.inl  application.cpp  application.hpp  arena_alloc.cpp  arena_alloc.hpp  arr_list.hpp  arr_list.inl  array_list.hpp  array_list.inl  array_map.inl  channel.hpp  channel.inl  clock.cpp  clock.hpp  colour.hpp  emitter.hpp  emitter.inl  empty_alloc.cpp  empty_alloc.hpp  handle.hpp  handle.inl  hash.hpp  hash.inl  hash_ctx.hpp  hash_ctx.inl  hash_map.hpp  hash_map.inl  invoker.hpp  invoker.inl  item_ref.hpp  item_ref.inl  keyboard.cpp  keyboard.hpp  loader.hpp  main.cpp  main_registry.cpp  pair_ref.hpp  pair_ref.inl  (+20 more)
src/core/: alloc.cpp  alloc.hpp  arena.cpp  arena.hpp  array.hpp  assert.hpp  buff.cpp  buff.hpp  buffer.cpp  buffer.hpp  core.make  core_test.make  expect.hpp  file.cpp  file.hpp  main_memory.cpp  main_opengl.cpp  memory.cpp  memory.hpp  memory.inl  premake5.lua  region.cpp  region.hpp  slice.hpp  slice.inl  str8.cpp  str8.hpp  types.hpp
src/exp/: array_map.hpp  array_map.inl  block_alloc.cpp  block_alloc.hpp  robin_map.hpp  robin_map.inl
