project('scent', 'cpp',
    default_options: [
        'cpp_std=c++11',
        'warning_level=3',
        'werror=true',
    ],
    version: '0.1.0',
)

executable('scent_main',
    sources: [
        'src/main.cpp',
        'src/alloc.cpp',
        'src/empty_alloc.cpp',
        'src/arena_alloc.cpp',
    ],
)
